--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,11 @@
 envlist = py37,py38,py39,py310
 
 [testenv]
+package_installer = uv
 deps =
+    uv
     pytest
     coverage
 commands =
+    uv pip install -e .
     coverage run --source loglab -m pytest tests
