--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,41 @@
-pytest
-coverage
-pyinstaller
-tox
+# Development dependencies for LogLab
+
+# Testing
+pytest>=7.0.0
+pytest-cov>=4.0.0
+coverage>=7.0.0
+tox>=4.0.0
+
+# Code formatting and linting
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+flake8-docstrings>=1.7.0
+flake8-import-order>=0.18.2
+
+# Pre-commit hooks
+pre-commit>=3.0.0
+
+# Security
+bandit>=1.7.5
+safety>=2.3.0
+
+# Performance testing
+psutil>=5.9.0
+
+# Documentation
+sphinx>=5.0.0
+sphinx-rtd-theme>=1.2.0
+
+# Development tools
+ipython>=8.0.0
+ipdb>=0.13.0
+
+# Build tools
+pyinstaller>=5.0.0
+wheel>=0.40.0
+setuptools>=65.0.0
+
+# Type checking (optional)
+mypy>=1.0.0
+types-requests>=2.28.0
