Fix GitHub Actions flake8 configuration to use setup.cfg
- Changed flake8 command to use setup.cfg instead of inline parameters
- This ensures CI and local lint environments use same configuration
- Resolves E501 line length errors in GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,14 +91,14 @@ jobs:
 
     - name: Run linting
       run: |
-        # Check code formatting with black
+        # Check code formatting with black (uses pyproject.toml configuration)
         black --check --diff loglab tests
 
-        # Check import sorting with isort
+        # Check import sorting with isort (uses pyproject.toml configuration)
         isort --check-only --diff loglab tests
 
-        # Run flake8 linting
-        flake8 loglab tests --max-line-length=88 --extend-ignore=E203,W503
+        # Run flake8 linting (uses setup.cfg configuration)
+        flake8 loglab tests
 
   security:
     runs-on: ubuntu-latest
