Generate required test files before tox execution
- Add step to generate loglab_foo.py before running tox
- Install package in development mode for code generation
- Remove pytest ignore setting for test_log_objects_python.py

Fixes ModuleNotFoundError for loglab_foo in GitHub Actions CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,13 @@ jobs:
         pip install tox coverage pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+        # Install package in development mode for code generation
+        pip install -e .
+
+    - name: Generate required test files for tox
+      run: |
+        # Generate Python log objects required by test_log_objects_python.py
+        python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
 
     - name: Run tests with tox
       run: tox -e py$(echo ${{ matrix.python-version }} | tr -d .)
