--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 [tox]
-envlist = py37,py38,py39,py310
+envlist = py38,py39,py310,py311,py312
 
 [testenv]
-package_installer = uv
 deps =
-    uv
-    pytest
-    coverage
+    -r{toxinidir}/requirements-dev.txt
 commands =
-    uv pip install -e .
+    pip install -e .
     coverage run --source loglab -m pytest tests
