--- a/tox.ini
+++ b/tox.ini
@@ -6,4 +6,6 @@ deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
     pip install -e .
+    # Generate required test files
+    python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
     coverage run --source loglab -m pytest tests
