Fix CLI exit code consistency by pinning Click>=8.0.0
- Pin click>=8.0.0 in both setup.py and requirements.txt
- Add verbose testing output to tox configuration (-v --tb=short)

Resolves Python 3.8 test failures due to Click version differences:
- Click <8.0: CLI group without command exits with code 0
- Click >=8.0: CLI group without command exits with code 2 (expected by tests)

This ensures consistent CLI behavior across all Python 3.8-3.12 environments.

--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ commands =
     pip install -e .
     # Generate required test files
     python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
-    coverage run --source loglab -m pytest tests
+    coverage run --source loglab -m pytest tests -v --tb=short
