Force consistent CLI behavior across all Click versions
- Add explicit no_args_is_help=True to @click.group() decorator
- Force Click>=8.0.0 upgrade in tox before package installation
- This ensures exit code 2 when CLI is invoked without commands

Resolves Python 3.8 test failures by making CLI behavior
version-independent through explicit configuration.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py38,py39,py310,py311,py312
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
+    pip install --upgrade click>=8.0.0
     pip install -e .
     # Generate required test files
     python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
