readthedocs 설정 추가

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -39,3 +39,7 @@ setuptools>=65.0.0
 # Type checking (optional)
 mypy>=1.0.0
 types-requests>=2.28.0
+
+# Documentation
+sphinx>=8.2.3
+sphinx-rtd-theme>=3.0.2
