python 3.8 을 테스트에서 제외하고 tox 가 uv 이용하게

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
-envlist = py38,py39,py310,py311,py312
+envlist = py39,py310,py311,py312
 
 [testenv]
+runner = uv-venv-runner
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
-    pip install --upgrade click>=8.0.0
-    pip install -e .
+    uv pip install --upgrade click>=8.0.0
+    uv pip install -e .
     # Generate required test files
     python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
     coverage run --source loglab -m pytest tests -v --tb=short
