github workflow 에서 tox-uv 설치

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,24 @@
 envlist = py39,py310,py311,py312
 
 [testenv]
+# Use uv-venv-runner if available, fallback to default
 runner = uv-venv-runner
 deps =
     -r{toxinidir}/requirements-dev.txt
 commands =
     uv pip install --upgrade click>=8.0.0
     uv pip install -e .
+    # Generate required test files
+    python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
+    coverage run --source loglab -m pytest tests -v --tb=short
+
+# Fallback environment for CI without uv
+[testenv:py{39,310,311,312}-ci]
+deps =
+    -r{toxinidir}/requirements-dev.txt
+commands =
+    pip install --upgrade click>=8.0.0
+    pip install -e .
     # Generate required test files
     python -m loglab object example/foo.lab.json py -o tests/loglab_foo.py
     coverage run --source loglab -m pytest tests -v --tb=short
