--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,12 +40,12 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox coverage pytest
+        pip install tox tox-uv coverage pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
 
     - name: Run tests with tox
-      run: tox -e py$(echo ${{ matrix.python-version }} | tr -d .)
+      run: tox -e py$(echo ${{ matrix.python-version }} | tr -d .)-ci
 
     - name: Run additional code generation tests
       run: |
