--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,33 @@ dmypy.json
 loglab_*.py
 loglab_*.cs
 loglab_*.h
+loglab_*.ts
+loglab_*.java
+tests/**/loglab_*.ts
+tests/**/loglab_*.java
+tests/**/loglab_*.cs
+tests/**/loglab_*.h
+tests/**/LogLabFoo.java
+tests/**/test_log_objects_cpp
 fakelog.txt
+
+# Node.js / TypeScript
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+*.tsbuildinfo
+dist/
+
+# Java / Maven
+target/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
 
 # IDE files
 .idea/
